# evalkit

./: .gitignore  .pre-commit-config.yaml  LICENSE  README.md  justfile  pyproject.toml  uv.toml
.github/workflows/: ci.yml  publish.yml
docs/: design.md
examples/quickstart/: README.md  adapter.py  graders.py  run_eval.py  suite.yaml
examples/quickstart/datasets/support_reply/v1/cases/: angry_complaint.yaml  billing_question.yaml  double_charge.yaml  refund_request.yaml
examples/quickstart/fixtures/: support_reply_judge.yaml  support_reply_pairwise.yaml  support_reply_replay.yaml
examples/quickstart/tests/: test_quickstart.py
src/evalcore/: __init__.py  cli.py  compare.py  loader.py  pairwise.py  rating.py  refs.py  report.py  runner.py  store.py  sweep.py
src/evalcore/adapters/: __init__.py  base.py  http.py  replay.py
src/evalcore/graders/: __init__.py  base.py  classification.py  deterministic.py  judge.py  numeric.py
src/evalcore/reporters/: __init__.py  base.py  html.py  markdown.py
src/evalkit/: __init__.py  cli.py  compare.py  loader.py  models.py  pairwise.py  rating.py  report.py  retry.py  runner.py  store.py  sweep.py
src/evalkit/adapters/: __init__.py  _env.py  base.py  http.py  replay.py
src/evalkit/graders/: __init__.py  base.py  classification.py  deterministic.py  judge.py  numeric.py
src/evalkit/reporters/: __init__.py  base.py  html.py  markdown.py
tests/: test_adapters.py  test_cli.py  test_edge_cases.py  test_judge.py  test_judge_extra.py  test_live_clients.py  test_pairwise_extra.py  test_rating.py  test_rating_server.py  test_reporters.py  test_retry.py  test_runner.py  test_store.py  test_sweep_pairwise.py  test_unit.py
