[project]
# Distribution name on PyPI ("evalkit" was taken). The import package and the
# console script are still `evalkit` (see [tool.hatch...] and [project.scripts]).
name = "evalcore"
version = "0.1.0"
description = "A generic, consumer-agnostic evaluation engine for prompt, model, and API outputs."
readme = "README.md"
requires-python = ">=3.14"
license = "BSD-3-Clause"
license-files = ["LICENSE"]
authors = [{ name = "AWeber Communications" }]
classifiers = [
  "Development Status :: 4 - Beta",
  "Intended Audience :: Developers",
  "Natural Language :: English",
  "Programming Language :: Python :: 3.14",
  "Topic :: Software Development :: Testing",
]
dependencies = [
    "pydantic>=2.7,<3",
    "pyyaml>=6,<7",
]

[project.urls]
Homepage = "https://github.com/scottpmiller/evalcore"
Repository = "https://github.com/scottpmiller/evalcore"
Issues = "https://github.com/scottpmiller/evalcore/issues"

[project.optional-dependencies]
# Needed only by the http target adapter (live runs). Replay/offline needs none.
http = ["httpx>=0.27"]
# Needed only by the live judge clients (llm_judge in live mode): Anthropic
# and/or OpenAI, depending on the panel's configured providers.
judge = ["anthropic>=0.40", "openai>=1.40"]

[project.scripts]
evalkit = "evalkit.cli:main"

[build-system]
requires = ["hatchling>=1.27"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/evalkit"]

[dependency-groups]
dev = [
    "coverage[toml]~=7.14.0",
    "httpx>=0.27",
    "pre-commit~=4.5.1",
    "ruff~=0.15.2",
]

[tool.coverage.run]
branch = true
source = ["src"]
relative_files = true
command_line = "-m unittest discover -s tests -t ."

[tool.coverage.report]
show_missing = true
fail_under = 90
exclude_lines = ["raise NotImplementedError", "pragma: no cover"]

[tool.coverage.xml]
output = "build/reports/coverage.xml"

[tool.coverage.html]
directory = "build/reports/coverage"

[tool.ruff]
line-length = 79
target-version = "py314"

[tool.ruff.lint]
select = [
  "BLE", "C4", "E", "W", "F", "G", "I", "N", "Q", "S",
  "ASYNC", "B", "DTZ", "FURB", "RUF", "T20", "UP",
]
ignore = [
  "N818",   # exception class names need not end in Error
  "RSE",    # do not require parentheses on raised exceptions
  "UP040",  # allow non-PEP695 type aliases
]

[tool.ruff.lint.per-file-ignores]
# The CLI and the example driver write their reports to stdout by design.
"src/evalkit/cli.py" = ["T201"]
"examples/*/run_eval.py" = ["T201"]
# The rating web app embeds an HTML/CSS/JS page as a string blob (long
# lines) and prints its serving URL to stdout by design.
"src/evalkit/rating.py" = ["E501", "T201"]
# The HTML reporter assembles HTML/CSS string fragments (long lines).
"src/evalkit/reporters/html.py" = ["E501"]
# Tests use asserts, mock credentials, localhost URLs, and temp paths
# (flake8-bandit is noise here).
"tests/**" = ["S"]

[tool.ruff.lint.flake8-quotes]
inline-quotes = "single"

[tool.ruff.lint.isort]
split-on-trailing-comma = false
known-first-party = ["evalkit", "examples"]

[tool.ruff.format]
quote-style = "single"
skip-magic-trailing-comma = true
docstring-code-format = true
docstring-code-line-length = 40
